# fastapi-tdd

./: README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: main.yml
project/: Dockerfile  Dockerfile.prod  README.md  pyproject.toml  setup.cfg
project/app/: config.py  db.py  main.py
project/app/api/: crud.py  summaries.py
project/tests/: conftest.py  test_ping.py  test_summaries.py
