[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["salahelfarissi <salaheddine.elfarissi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
tortoise-orm = "^0.20.0"
aerich = "^0.7.2"
httpx = "^0.26.0"
pytest = "^7.4.4"
gunicorn = "^21.2.0"

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
